--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,6 +38,7 @@ header a {
   grid-template-columns: 3fr 1fr;
   gap: 5%;
 }
+.character-details,
 .movie-details {
   background: #fff;
   border-radius: 4px;
@@ -46,16 +47,19 @@ header a {
   position: relative;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
 }
+.character-details h4,
 .movie-details h4 {
   margin: 0 0 10px 0;
   font-size: 1.2em;
   color: var(--primary);
 }
+.character-details p,
 .movie-details p {
   margin: 0;
   font-size: 0.9em;
   color: #555;
 }
+.character-details span,
 .movie-details span {
   position: absolute;
   top: 20px;
@@ -67,11 +71,11 @@ header a {
   color: #333;
 }
 
-/* new movie form */
-label, input {
+/* Form Styles */
+label, input, textarea {
   display: block;
 }
-input {
+input, textarea {
   padding: 10px;
   margin-top: 10px;
   margin-bottom: 20px;
